fix for automata without initial states
Our verification creates automata without initial states in certain
cases, e.g. when no thread can (locally) reach an error location.

Previously, this causes exceptions in the reduction and traversal
algorithms. Now, we output a warning and return gracefully.